ui/apps/themes/style.less
/* ... */
//
// Generic toolbar
//
.generic-toolbar {

    @height-default: 45px;
    @height-small: 30px;

    position: absolute;
    z-index: 2;

    width: 100%;
    height: @height-default;
    padding: 0;
    background-color: #fff;
    border: 0px solid mix(@text-color, @background, 200%/15);

    font-size: 14px;
    line-height: @height-default - 1;

    &.top {
        top: 0;
        border-bottom-width: 1px;
    }

    &.bottom {
        bottom: 0;
        border-top-width: 1px;
    }

    .toolbar-item {

        color: #333;
        display: inline-block;
        float: left;
        line-height: @height-default - 1;
        padding: 0 14px;
        text-decoration: none;

        &:first-child { padding-left: 18px; }
        &:last-child { padding-right: 18px; }
    }

    &.visual-focus .toolbar-item {

        outline: 0;

        &:hover {
            color: #555;
            background-color: rgba(0, 0, 0, 0.05);
        }

        &:focus {
            color: #fff;
            background-color: @toolbar-focus-color;
        }

        &:focus > i { color: #fff; }
    }

    &.toolbar-small {
        height: @height-small;
        line-height: @height-small - 1;
        .toolbar-item {
            line-height: @height-small - 1;
        }
    }
}

// ------

.inplace-search {
    padding: 7px 10px;
    line-height: 20px;
    z-index: 10;
    //background-color: @foldertree-sidepanel-background;
}

// ------

.toolbar-action {
    display: inline-block;
    line-height: 40px - 2; // yep!
    text-align: center;
}

a.toolbar-action {
    padding: 0 20px 0 20px;
}

.toolbar-action > a {
    display: inline-block;
    padding: 0 20px 0 20px;
}

.toolbar-action i.enabled { color: #888; }
.toolbar-action:hover { background-color: rgba(0, 0, 0, 0.20); }
a.toolbar-action, .toolbar-action > a {
    color: lighten(@link-color, 5%);
    outline: 0;
    text-decoration: none;
    &:hover { text-decoration: none; }
    i.accent-color { color: @link-accent-color; }
}
.toolbar-action.pull-left { margin-right: 1px; }
.toolbar-action.pull-right { margin-left: 1px; }
.toolbar-action ul { text-align: left; }

/* Focus */

.toolbar-action a:focus {
    background-color: @toolbar-focus-color;
    i { color: white; }
}

/* context menu */
.context-dropdown.dropdown { position: fixed; }
.context-dropdown {

    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 10000;
    background-color: rgba(255, 255, 255, 0.01);
    display: none;

    .dropdown-toggle {
        display: none;
    }

    &.open {
        display: block;
    }

    .dropdown-menu {
        position: absolute;
        top: 100px;
        left: 100px;
        z-index: 10001; // > 10000; see bug #32517
    }

    .dropdown-menu.io-ox-busy {
        min-height: 100px;
    }

    .dropdown-menu:empty,
    .divider:first-child, .divider:last-child, .divider + .divider { display: none; }
}

/* Guidance view */

.statistics {

    .overflow(auto);
    position: static; /* Bug 31425 */
    @distance: 28px;

    &.modal-body {
        padding: 28px 28px 0 28px;
    }

    h1.folder-name {
        font-size: 24px;
        text-transform: uppercase;
        margin: 0 0 24px 0;
    }

    header, section {
        margin: 0 0 @distance 0;
        &:last-child { margin-bottom: 0; }
    }

    .folder-summary {
        color: #888;
    }

    .folder-actions {
        margin-top: 14px;
    }

    h2 {
        font-size: 20px;
        line-height: 24px;
        font-weight: 300;
        margin: 0 0 14px 0;
    }

    ul.compact {

        li {
            a.disabled {
                display: none;
            }
        }

        li.divider {
            display: none;
        }
    }

    canvas {
        margin-bottom: 10px;
    }
}

/* --- */

.io-ox-sectionTitle {
    font-size: 1.2em;
    font-weight: bold;
    margin-top:1em;
    margin-bottom: 0.5em;
}

.io-ox-clickable {
    cursor: pointer;
}

.io-ox-clear {
    clear: both;
}

.cursor-pointer { cursor: pointer; }

.participant-image {
    float: left;
    margin-right: 1em;
    .picture(54px, 54px); /* 54px allows 3 lines with 18px line-height */
}

.participant-image.contact-image,
.participant-image.external-user-image {
    background-image: url('apps/themes/default/dummypicture.png');
}

.participant-image.group-image {
    background-image: url('apps/themes/default/dummypicture_group.png');
    background-position: 0 -4px;
}

.participant-image.resource-image {
    background-image: url('apps/themes/default/dummypicture_resource.png');
}

/** DRAG & DROP **/

@drag-size: 40px;

.drag-helper {
    position: absolute;
    z-index: 65000;
    width: 300px;
    height: @drag-size;
    line-height: @drag-size;
    color: #333;
    background-color: rgba(240, 240, 240, 0.80);
    padding: 0 14px 0 @drag-size + 14px;
    .ellipsis();
}

.drag-counter {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: @drag-size;
    text-align: center;
    font-weight: bold;
    color: #fff;
    background-color: rgba(0, 0, 0, 0.50);
}

.inplace-dropzone {

    margin: 7px;
    border: 2px dashed #aaa;
    background-color: #fff;

    position: relative;
    &.abs { position: absolute; z-index: 2; }

    .dropzone-caption, .dropzone-dragover {
        color: #888;
        text-align: center;
        top: 50%;
        width: 100%;
        margin-top: -10px;
        z-index: 1;
        html.high-contrast & {
            color: @black;
        }
    }

    .dropzone-dragover {
        color: #ddd;
        font-size: 60px;
        line-height: 80px;
        margin-top: -40px;
        display: none;
    }

    .dropzone-overlay {
        background-color: white;
        opacity: 0.01;
        z-index: 2;
    }

    &.dragover {
        border-color: #ccc;
        .dropzone-caption { display: none; }
        .dropzone-dragover { display: block; }
    }
}
/* ... */

